Added sync info and updated options